# bad-sand-game

./: Cargo.toml
src/: main.rs
