[package]
name = "sandgame"
version = "0.1.0"
edition = "2021"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
egui = "0.22"
egui-wgpu = "0.22"
egui-winit = { version = "0.22", default-features = false, features = ["links"] }
enumset = "1.1.3"
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = "0.13"
rand = "0.8.5"
winit = "0.28"
winit_input_helper = "0.14"
